# quick-note

./: .gitignore  README.md  build_portable.ps1  note_capture.py  note_watcher.py  pyproject.toml  quick-note.ahk
.github/workflows/: license-check.yml  release.yml
docs/: README-portable.txt
tests/: test_note_capture.py  test_note_watcher.py  test_release_workflow.py
