[project]
name = "quick-note"
version = "1.1.0"
description = "Quick note capture tool for Obsidian inbox"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "B", "UP", "SIM", "I"]
ignore = ["E501", "E711", "E712", "SIM105", "SIM108", "SIM117", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["note_capture", "note_watcher", "claude_launcher"]
